[package]
name = "roll_lang"
version = "0.1.0"
authors = ["Jacob Guenther <jacobrwguenther@protonmail.com>"]
edition = "2018"
description = "An interpreter for a modified version of dice notation."
readme = "README.md"
repository = "https://github.com/jacobguenther/roll_lang"
license-file = "LICENSE.md"
keywords = ["Dice", "Notation"]
categories = ["game-development", "parser-implementations", "text-processing"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
crate-type = ["lib"]

[features]
serialize = ["serde", "serde_json"]

[dependencies]
unicode-segmentation = "1.6.0"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true