[package]
name = "roll_lang"
version = "0.1.0"
authors = ["Jacob Guenther <jacobrwguenther@protonmail.com>"]
edition = "2018"
description = "An interpreter for a modified version of dice notation."
readme = "README.md"
repository = "https://github.com/jacobguenther/roll_lang"
license-file = "LICENSE.md"
keywords = ["Dice", "Notation"]
categories = ["game-development", "parser-implementations", "text-processing"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["wasm-bindings"]
wasm-bindings = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys"]

[dependencies]
unicode-segmentation = "1.6.0"

[dependencies.rand]
version = "0.8.5"
optional = true

[dependencies.wasm-bindgen]
version = "0.2.67"
features = ["serde-serialize"]
optional = true

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"HtmlDocument",
	"Element",
	"HtmlTextAreaElement",
	"HtmlInputElement"
]
optional = true

[dependencies.js-sys]
version = "0.3.44"
optional = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false